# cuda2rocm

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: compile-test.yml
cmake/: rocm-cuda-compat-config.cmake
cucascade-rocm/docs/: api-surface.md
cucascade-rocm/include/cucascade/cuda/: event.hpp
cucascade-rocm/include/cucascade/cudf/: builtin_converters.hpp  gpu_data_representation.hpp  host_data_representation.hpp  host_table.hpp  host_table_packed.hpp
cucascade-rocm/include/cucascade/data/: common.hpp  data_batch.hpp  data_repository_manager.hpp  disk_data_representation.hpp  representation_converter.hpp
cucascade-rocm/include/cucascade/memory/: chunked_resource_info.hpp  column_metadata.hpp  common.hpp  config.hpp  disk_access_limiter.hpp  disk_table.hpp  error.hpp  fixed_size_host_memory_resource.hpp  memory_reservation.hpp  memory_reservation_manager.hpp  memory_space.hpp  oom_handling_policy.hpp  reservation_aware_resource_adaptor.hpp  reservation_manager_configurator.hpp  small_pinned_host_memory_resource.hpp  stream_pool.hpp  topology_discovery.hpp
cucascade-rocm/tests/: test_cucascade_compile.cpp
cuco-rocm/docs/: api-surface.md
cuco-rocm/include/cuco/: bloom_filter.cuh  bloom_filter_policies.cuh  extent.cuh  hash_functions.cuh  operator.hpp  static_set.cuh
cuco-rocm/tests/: test_bloom_filter.cu  test_static_set.cu
cuda-compat-shims/include/: cooperative_groups.h  cuda.h  cuda_runtime.h  cuda_runtime_api.h  curand.h
cuda-compat-shims/include/cooperative_groups/: memcpy_async.h
cuda-compat-shims/include/cub/: config.cuh  cub.cuh  util_arch.cuh  util_ptx.cuh
cuda-compat-shims/include/cub/device/: device_for.cuh
cuda-compat-shims/include/cub/thread/: thread_store.cuh
cuda-compat-shims/include/cub/warp/: warp_scan.cuh
cuda-compat-shims/include/cucascade/: error.hpp
cuda-compat-shims/include/cucascade/cudf/: gpu_data_representation.hpp  host_data_representation.hpp  host_table.hpp
cuda-compat-shims/include/cucascade/data/: common.hpp  data_batch.hpp  data_repository.hpp  data_repository_manager.hpp  representation_converter.hpp
cuda-compat-shims/include/cucascade/memory/: common.hpp  disk_access_limiter.hpp  memory_space.hpp  notification_channel.hpp  numa_region_pinned_host_allocator.hpp  oom_handling_policy.hpp  reservation_aware_resource_adaptor.hpp  small_pinned_host_memory_resource.hpp  stream_pool.hpp  topology_discovery.hpp
cuda-compat-shims/include/cuda/: atomic  cmath  functional  memory_resource  stream_ref
cuda-compat-shims/include/cuda/__memory/: aligned_size.h
cuda-compat-shims/include/cuda/std/: __cccl_config.h  _fallback.hpp  algorithm  cstddef  cstdint  cstring  functional  limits  numeric  optional  type_traits
cuda-compat-shims/include/nvtx3/: nvtx3.hpp
